--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awsl Naive</title>
+    <!-- naive-ui 的样式会出现在这里 -->
+    <meta name="naive-ui-style" />
+    <!-- vueuc 的样式会出现在这里 -->
+    <meta name="vueuc-style" />
   </head>
   <body>
     <div id="app"></div>
